# studentrepo

./: .gitignore  requirements.txt  run_server.sh  setup.cfg  setup.py  storage  test-requirements.txt  tox.ini
student/: models.py  settings.py  shortcuts.py  urls.py  views.py  wsgi.py
student/accounts/: forms.py  urls.py  views.py
student/static/css/: site.css
student/templates/: base.html  index.html
student/templates/accounts/: login.html  profile.html  registration.html
student/templates/registration/: logged_out.html  login.html  profile.html
student/utils/file_retriever/: base.py  local_retriever.py
tools/: with_venv.sh
