[metadata]
name = student
version = 0.01
summary = Student Project
description-file = README.rd
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Environment :: Django
    Intended Audience :: Information Technology
    Intended Audience :: Students
    Operating System :: POSIX :: Linux

[files]
packages =
    student

[nosetests]
cover-package = student

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
